# RhythmicGesticulator

./: README.md  generate.py  pyproject.toml
Data_Preprocessing/: preprocess.py
Data_Preprocessing/Utils/: audio_features.py  utils.py
Gesture_Generator/Training/Trinity/RNN/: config.json5
