[tool.poetry]
name = "rhythmicgesticulator"
version = "0.1.0"
description = "Rhythmic Gesticulator"
authors = ["Thanh Hoang-Minh <hmthanhgm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ffmpeg = "^1.4"
joblib = "^1.4.2"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.1"
numpy = "^2.0.1"
pandas = "^2.2.2"
pip = "^24.1.2"
scikit-learn = "^1.5.1"
scipy = "^1.14.0"
tensorboardx = "^2.6.2.2"
tqdm = "^4.66.4"
json5 = "^0.9.25"
docopt = "^0.6.2"
moviepy = "^1.0.3"
tensorboard = "^2.17.0"
transforms3d = "^0.4.2"
opencv-python = "^4.10.0.84"
pyloudnorm = "^0.1.1"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
